--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,11 @@
 #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
 name: Java CI with Maven
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+  security-events: write
 
 on:
   push:
